Closed Bug 968616 Opened 12 years ago Closed 12 years ago

Hide the explicitly broken things we do for testing from the hazard analysis

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: terrence, Assigned: sfink)

References

Details

Attachments

(2 files, 1 obsolete file)

The analysis will just freak out if it sees this code, so why tell it? I won't it if you won't. I'm not sure if this is exactly the best way to hide code from the analysis, but I figure it should work considering it "worked" in other parts of the browser.
Attachment #8371212 - Flags: review?(sphink)
Comment on attachment 8371212 [details] [diff] [review] hide_gcstorebufferremoval_test_from_analysis-v0.diff Review of attachment 8371212 [details] [diff] [review]: ----------------------------------------------------------------- You're going to be reincarnated as a hagfish for this one. http://bio.fsu.edu/~bsc2011l/graphics/Kingdom_Animalia/5_Eucoelomates/phylum_chordata/agnatha_hagfish.jpg r=me, though really we should make an AutoLieAndClaimNoGC RAII object and have the analysis treat it as if it were an AutoAssertNoGC. AutoHideGCFromAnalysis?
Attachment #8371212 - Flags: review?(sphink) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
The analysis was not fooled by our ball-and-cup game. Soon it will be as smart as a cat.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attempt 2
Attachment #8377869 - Flags: review?(terrence)
Assignee: terrence → sphink
Status: REOPENED → ASSIGNED
Comment on attachment 8377869 [details] [diff] [review] "Implement" AutoIgnoreRootingHazards Review of attachment 8377869 [details] [diff] [review]: ----------------------------------------------------------------- Nice! That was more straightforward than I thought it would be. r=me
Attachment #8377869 - Flags: review?(terrence) → review+
Attachment #8377869 - Attachment is obsolete: true
Comment on attachment 8378553 [details] [diff] [review] "Implement" AutoIgnoreRootingHazards Review of attachment 8378553 [details] [diff] [review]: ----------------------------------------------------------------- Oh, that's awful, but it does fit right it with the rest of the test now, so r=me.
Attachment #8378553 - Flags: review?(terrence) → review+
Attachment #8378553 - Flags: checkin+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: