Bug 968616 - Hide the explicitly unsafe things we do for testing from the hazard analysis; r=sfink